re PR bootstrap/45321 (ARM bootstrap failure due to stdarg_p change)

2010-09-01  Mikael Pettersson  <mikpe@it.uu.se>

       PR bootstrap/45321
       * tree.c (stdarg_p): Make fntype parameter const.
       * tree.h (stdarg_p): Likewise.
       (function_args_iterator): Remove unused fntype field.
       (function_args_iter_init): Do not initialize fntype
       field.  Make fntype parameter const.

From-SVN: r163726